# touhou-chatbot

./: .gitignore  README.md  package-lock.json  package.json  package.json.backup  postcss.config.js  tailwind.config.ts  vercel.json
api/: characters.py  chat.py  index.py  requirements.txt
app/: layout.tsx  page.tsx
app/components/: CharacterSelect.tsx  ChatScreen.tsx
app/constants/: characters.ts
app/utils/: chatHistory.ts
backend/: app.py  pyproject.toml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: CharacterSelect.tsx  ChatScreen.tsx
frontend/app/utils/: chatHistory.ts
public/: characters.json
public/avatars/: README.md
